fastrace-macro/tests/ui/err/properties-partial-escape.stderr
error: invalid format string: unmatched `}` found
 --> tests/ui/err/properties-partial-escape.rs:5:1
  |
5 | #[trace(properties = { "a": "{{b}" })]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unmatched `}` in format string
  |
  = note: if you intended to print `}`, you can escape it using `}}`
  = note: this error originates in the attribute macro `trace` (in Nightly builds, run with -Z macro-backtrace for more info)
